objects/geopointe__Data_Set_Object__c.object
<CustomObject>
    <description>Stores information related to a Geopointe Data Set.</description>
    <fields>
        <fullName>geopointe__Available_Maps__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, this Data Set becomes available on the Map tab.</inlineHelpText>
        <label>Available (Maps)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Available_Visualize__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, this Data Set becomes available on the Visualize tab.</inlineHelpText>
        <label>Available (Visualize)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Child_Filter_Logic__c</fullName>
        <description>Stores the AND/OR cross-object filter logic for queries, eg: 1 AND (2 OR 3)</description>
        <label>Child Filter Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Color_Marker_Date_Bin_Size__c</fullName>
        <label>Color Marker Date Bin Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>day</fullName>
                    <default>true</default>
                    <label>day</label>
                </value>
                <value>
                    <fullName>week</fullName>
                </value>
                <value>
                    <fullName>month</fullName>
                </value>
                <value>
                    <fullName>quarter</fullName>
                </value>
                <value>
                    <fullName>year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Color_Marker_Date_Rule_Generator__c</fullName>
        <label>Color Marker Date Rule Generator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>auto</fullName>
                    <default>true</default>
                    <label>auto</label>
                </value>
                <value>
                    <fullName>customRange</fullName>
                </value>
                <value>
                    <fullName>dynamicRange</fullName>
                </value>
                <value>
                    <fullName>ordinalDayOfWeek</fullName>
                </value>
                <value>
                    <fullName>ordinalWeekOfMonth</fullName>
                </value>
                <value>
                    <fullName>ordinalMonthOfYear</fullName>
                </value>
                <value>
                    <fullName>ordinalQuarterOfYear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Color_Markers_By__c</fullName>
        <label>Color Markers By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Color__c</fullName>
        <defaultValue>&quot;003BFF&quot;</defaultValue>
        <inlineHelpText>The HEX color that the Data Set markers should be in</inlineHelpText>
        <label>Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Data_Set_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Data Set Identifier</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Fields__c</fullName>
        <description>Holds information related to the fields to include with the Data Set.</description>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Filter_Logic__c</fullName>
        <description>Stores the AND/OR filter logic for queries, eg: 1 AND (2 OR 3)</description>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Filters__c</fullName>
        <description>Holds configuration for filters for Data Sets.</description>
        <label>Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Folder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Folder</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>geopointe__GP_Folder__c.Id</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>geopointe__GP_Folder__c</referenceTo>
        <relationshipLabel>Data Sets</relationshipLabel>
        <relationshipName>Data_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Formatted_Address_for_Data_Table__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the system will output a formatted address in 1 column of the data table.</inlineHelpText>
        <label>Formatted Address for Data Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Label_Markers_By__c</fullName>
        <description>Display field text at marker position (with or without icon) for this Data Set.</description>
        <label>Text Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Run__c</fullName>
        <description>Updated each time Data Set is used in a search.</description>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Object__c</fullName>
        <inlineHelpText>The name of the map object this Data Set is based upon. The value in this field should match the value in the corresponding Map Object record (including being in lower case).</inlineHelpText>
        <label>Map Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Marker_Icon__c</fullName>
        <description>Contains the make of the Maki icon for this Data Set.</description>
        <label>Marker Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Marker_Rules__c</fullName>
        <description>Holds configuration for displaying markers on a map.</description>
        <label>Marker Rules</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Marker_Text__c</fullName>
        <description>Contains the text to add to the marker for this Data Set.</description>
        <label>Marker Text</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Marker_Type__c</fullName>
        <label>Marker Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>static</fullName>
                    <default>true</default>
                    <label>static</label>
                </value>
                <value>
                    <fullName>dynamic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Multi_Rule_Fields__c</fullName>
        <label>Multiple Rule Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Number_of_Fields_Displayed_in_Table__c</fullName>
        <description>Sets the number of fields displayed in the table under the map.</description>
        <inlineHelpText>This value controls how many of the selected fields are displayed in the search results table under the map. For example, if &apos;5&apos; is selected, the first 5 fields the current user has access to will be displayed in the table.</inlineHelpText>
        <label>Number of Fields Displayed in Table</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Order_By_Direction__c</fullName>
        <inlineHelpText>Specifies whether the Order By should be done in an Ascending or Descending manner.</inlineHelpText>
        <label>Order By Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <default>true</default>
                    <label>ASC</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Order_By_Field__c</fullName>
        <inlineHelpText>The field that the system should order the query by when performing a query using this Data Set. If a value is not specified, the system defaults to sorting by the field you specified as the &quot;Name Field&quot; above.</inlineHelpText>
        <label>Order By Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this becomes a personal Data Set available only to the owner.</inlineHelpText>
        <label>Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Query_Limit__c</fullName>
        <inlineHelpText>Maximum number of records to return.</inlineHelpText>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Refresh_Interval__c</fullName>
        <description>The number of seconds between automatic re-displays of the Data Set on the map.</description>
        <inlineHelpText>This value controls how often (in seconds) the data is automatically refreshed on the map.  Minimum value is 10 secords.</inlineHelpText>
        <label>Refresh Interval</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Report_Source_DeveloperName__c</fullName>
        <inlineHelpText>Holds the DeveloperName of the Salesforce Report used to source the Data Set.  If not blank, the Data Set will use filter and field values derived from the Report.</inlineHelpText>
        <label>Report Source DeveloperName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Show_Filter__c</fullName>
        <description>High level ownership filter.</description>
        <label>Show Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>all</fullName>
                    <default>true</default>
                    <label>all</label>
                </value>
                <value>
                    <fullName>my</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Status__c</fullName>
        <inlineHelpText>Inactive Data Sets cannot be used for mapping.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Geopointe Data Set</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Data Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Data Sets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>